k8s-test/client-test/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: client-test-dev
  annotations:
    # On dit à Traefik (installé par défaut sur K3s) de gérer ça
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: wordpress.152.228.130.213.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
